# designer-ci-demo

./: .dockerignore  .env  .env.example  AGENTCORE_DEPLOYMENT.md  Building-Agentic-Systems-with-MCP-and-AWS-AgentCore.md  DEMO_GUIDE.md  HOW_IT_WORKS.md  PLANNER_AGENT_GUIDE.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  chatbot.py  cleanup.sh  create_lambdas.sh  custom_prompt.txt  deploy.sh  hybrid_architecture_diagram.md  hybrid_implementation_example.py  pyproject.toml  test_local.sh
infra/: serverless.yml
mcp_evaluation_server/: Dockerfile  event.json  lambda_function.py  tool_manifest.json
mcp_github_server/: Dockerfile  event.json  lambda_function.py  tool_manifest.json
mcp_query_server/: lambda_function.py  requirements.txt  tool_manifest.json
planner_agent/: README_APPROVAL.md  approval_store.py  approve_action.py  config.yaml  planner_agent.py  planner_agent_with_approval.py  test_approval_workflow.sh
prompts/: system_prompt.txt
